name:                cuke
version:             0.1.0.0
synopsis:            Cucumber Wire Protocol handler
description:         Cucumber Wire Protocol handler
homepage:            http://github.com/tel/cuke
license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           Copyright (c) 2014 Joseph Abrahamson
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Test.Cuke
  build-depends:       base >=4.6 && <4.7
  hs-source-dirs:      src
  default-language:    Haskell2010
